# golem-des

./: .gitignore  .travis.yml  Cargo.toml  README.md
gd-cli/: Cargo.toml
gd-cli/src/: main.rs  params.rs
gd-cli/src/params/: source.rs  spec.rs
gd-engine/: Cargo.toml
gd-engine/src/: lib.rs
gd-tools/: Cargo.toml
gd-tools/src/: lib.rs  partition.rs  prelude.rs  stats.rs
gd-world/: Cargo.toml
gd-world-derive/: Cargo.toml
gd-world-derive/src/: lib.rs
gd-world/src/: error.rs  id.rs  lib.rs  logger.rs  prelude.rs  provider.rs  requestor.rs  task.rs  world.rs
gd-world/src/provider/: linear_usage_inflation.rs  regular.rs  undercut_budget.rs
gd-world/src/requestor/: defence.rs  task_queue.rs  verification.rs
gd-world/src/requestor/defence/: ctasks.rs  lgrola.rs  redundancy.rs
scenarios/: example.json  majority_evil_providers.json  minority_evil_providers.json  supply_equal_demand.json  two_evil_providers.json  undercut_budget.json
