[package]
name = "gd-cli"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
gd-world = { path = "../gd-world/" }
gd-tools = { path = "../gd-tools/" }
rand = "0.6"
rand_chacha = "0.1.0"
docopt = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_test = "1.0"
csv = "1"
rayon = "1.0"
gnuplot = { git = "https://github.com/SiegeLord/RustGnuplot" }
log = { version = "0.4", features = ["std"] }
statrs = "0.10"

[[bin]]
name = "run"
path = "src/main.rs"

[[bin]]
name = "analyse"
path = "src/bin/analyse.rs"
