[package]
name = "gd-world"
version = "0.1.0"
authors = ["Jakub Konka <kubkon@jakubkonka.com>"]
edition = "2018"

[dependencies]
gd-engine = { path = "../gd-engine/" }
rand = "0.6"
docopt = "1"
serde = "1.0"
serde_derive = "1.0"
serde_test = "1.0"
log = { version = "0.4", features = ["std"] }
statrs = "0.10"

